# human_value_detection_llms

./: README.md  pyproject.toml
CÓDIGO/: Exploratory DATA ANALYSIS.ipynb  Generación CATEGORÍAS.ipynb  Human Value Detection - ZeroShot y FewShot.ipynb  grammar_dict.txt
DATA/prompts/: few_shot_macro.txt  few_shot_subvalores.txt  prompt_rag.txt  zero_shot_macro.txt  zero_shot_subvalores.txt
